--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -2,14 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <title>privet</title>
 </head>
 
 <body>
 
-<p>Hello world!</p>
-
+<p>Hello!</p>
+<p>Show all users?</p>
+<a href="/users">YES</a>
 </body>
 
 </html>
