--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>privet</title>
+    <title>main</title>
 </head>
 
 <body>
@@ -11,6 +11,9 @@
 <p>Hello!</p>
 <p>Show all users?</p>
 <a href="/users">YES</a>
+<br/>
+<br/>
+<a href="/users/new">No, I want to create a user</a>
 </body>
 
 </html>
