--- a/src/main/webapp/WEB-INF/views/allUsers.html
+++ b/src/main/webapp/WEB-INF/views/allUsers.html
@@ -2,15 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>allUsers</title>
 </head>
 <body>
 
 <p>All Users:</p>
 
 <div th:each ="user : ${users}">
-    <a th:href="@{/{id}(id = ${user.getId()})}" th:text = "${user.getFirstName()}">user</a>
+    <a th:href="@{users/{id}(id = ${user.getId()})}" th:text = "${user.getFirstName()}">user</a>
 </div>
+<br/>
+
+<a th:href="@{/users/new}" th:text = new_User ></a>
 
 </body>
 </html>
