--- a/src/main/webapp/WEB-INF/views/allUsers.html
+++ b/src/main/webapp/WEB-INF/views/allUsers.html
@@ -9,7 +9,7 @@
 <p>All Users:</p>
 
 <div th:each ="user : ${users}">
-    <a th:href="@{users/{id}(id = ${user.getId()})}" th:text = "${user.getFirstName()}">user</a>
+    <a th:href="@{users/{id}(id = ${user.getId()})}" th:text = "${user.getFirstName()}" > </a>
 </div>
 <br/>
 
