--- a/src/main/webapp/WEB-INF/views/edit.html
+++ b/src/main/webapp/WEB-INF/views/edit.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-
-
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>new</title>
+    <title>edit</title>
 </head>
-
 <body>
 
-<form th:method="POST" th:action="@{/users}" th:object = "${user}">
+<form th:method="PATCH" th:action="@{/users/{id}(id = ${user.getId()})}" th:object = "${user}">
     <label for="value">First Name</label>
     <input type = "text" th:field="*{firstName}" id = "value">
     <br/>
@@ -22,10 +19,9 @@
     <label for="growth">Growth</label>
     <input type = "text" th:field="*{growth}" id = "growth">
     <br/>
-    <input type="submit" value="create"/>
+    <input type="submit" value="Update"/>
 
 </form>
 
 </body>
-
 </html>
