--- a/src/main/webapp/WEB-INF/views/user.html
+++ b/src/main/webapp/WEB-INF/views/user.html
@@ -7,6 +7,8 @@
 <p th:text = "${user.getId()}"> </p>
 <p th:text = "${user.getFirstName()}"> </p>
 <p th:text = "${user.getLastName()}"> </p>
+<p th:text = "${user.getAge()}"> </p>
+<p th:text = "${user.getGrowth()}"> </p>
 <br/>
 <a th:href = "@{/users}" th:text =All_Users></a>
 </body>
