--- a/src/main/webapp/WEB-INF/views/edit.html
+++ b/src/main/webapp/WEB-INF/views/edit.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<!--<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">-->
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>edit</title>
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/users/{id}(id = ${user.getId()})}" th:object = "${user}">
-    <label for="value">First Name</label>
-    <input type = "text" th:field="*{firstName}" id = "value">
+<form th:method="POST" th:action="@{/users/{id}(id = ${user.getId()})}" th:object="${user}">
+    <label for="firstName">First Name</label>
+    <input type = "text" th:field="*{firstName}" id = "firstName">
     <br/>
     <label for="lastName">Last Name</label>
     <input type = "text" th:field="*{lastName}" id = "lastName">
@@ -20,7 +21,6 @@
     <input type = "text" th:field="*{growth}" id = "growth">
     <br/>
     <input type="submit" value="Update"/>
-
 </form>
 
 </body>
