--- a/src/main/webapp/WEB-INF/views/new.html
+++ b/src/main/webapp/WEB-INF/views/new.html
@@ -10,8 +10,8 @@
 <body>
 
 <form th:method="POST" th:action="@{/users}" th:object = "${user}">
-    <label for="value">First Name</label>
-    <input type = "text" th:field="*{firstName}" id = "value">
+    <label for="firstName">First Name</label>
+    <input type = "text" th:field="*{firstName}" id = "firstName">
     <br/>
     <label for="lastName">Last Name</label>
     <input type = "text" th:field="*{lastName}" id = "lastName">
