--- a/src/main/webapp/WEB-INF/views/user.html
+++ b/src/main/webapp/WEB-INF/views/user.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
     <meta charset="UTF-8">
     <title>user</title>
 </head>
 <body>
-<p th:text = "${user.getId()}">ID</p>
-<p th:text = "${user.getFirstName()}"> </p>
-<p th:text = "${user.getLastName()}"> </p>
-<p th:text = "${user.getAge()}"> </p>
-<p th:text = "${user.getGrowth()}"> </p>
-<br/>
-<a th:href = "@{/users}" th:text =Show_all_users></a>
-<br/>
-<a th:href = "@{/users/{id}/delete(id=${user.getId()})}">DELETE</a>
-<br/>
-<a th:href = "@{/users/{id}/edit(id=${user.getId()})}" th:text =update></a>
-<br/>
+    id:
+    <a th:text = "${user.getId()}"></a>
+    <br>
+    FirstName:
+    <a th:text = "${user.getFirstName()}"> </a>
+    <br>
+    LastName:
+    <a th:text = "${user.getLastName()}"> </a>
+    <br>
+    Age:
+    <a th:text = "${user.getAge()}"> </a>
+    <br>
+    Growth:
+    <a th:text = "${user.getGrowth()}"> </a>
+
+    <br/>
+    <a th:href = "@{/users/{id}/delete(id=${user.getId()})}">delete</a>
+    <br/>
+    <a th:href = "@{/users/{id}/edit(id=${user.getId()})}" th:text =update></a>
+    <br/>
+    <a th:href = "@{/users}">show all users</a>
+    <br/>
 </body>
 </html>
