--- a/src/main/webapp/WEB-INF/views/new.html
+++ b/src/main/webapp/WEB-INF/views/new.html
@@ -9,19 +9,25 @@
 
 <body>
 
-<form th:method="POST" th:action="@{/users}" th:object = "${user}">
-    <label for="firstName">First Name</label>
-    <input type = "text" th:field="*{firstName}" id = "firstName">
+<form th:method="POST" th:action="@{/admin/new}" th:object = "${user}">
+    <label for="login">login</label>
+    <input type = "text" th:field="*{login}" id = "login">
     <br/>
-    <label for="lastName">Last Name</label>
-    <input type = "text" th:field="*{lastName}" id = "lastName">
+    <label for="password">password</label>
+    <input type = "text" th:field="*{password}" id = "password">
     <br/>
-    <label for="age">Age</label>
-    <input type = "text" th:field="*{age}" id = "age">
-    <br/>
-    <label for="growth">Growth</label>
-    <input type = "text" th:field="*{growth}" id = "growth">
-    <br/>
+<!--    <label for="firstName">First Name</label>-->
+<!--    <input type = "text" th:field="*{firstName}" id = "firstName">-->
+<!--    <br/>-->
+<!--    <label for="lastName">Last Name</label>-->
+<!--    <input type = "text" th:field="*{lastName}" id = "lastName">-->
+<!--    <br/>-->
+<!--    <label for="age">Age</label>-->
+<!--    <input type = "text" th:field="*{age}" id = "age">-->
+<!--    <br/>-->
+<!--    <label for="growth">Growth</label>-->
+<!--    <input type = "text" th:field="*{growth}" id = "growth">-->
+<!--    <br/>-->
     <input type="submit" value="create"/>
 
 </form>
