--- a/src/main/webapp/WEB-INF/views/user.html
+++ b/src/main/webapp/WEB-INF/views/user.html
@@ -8,6 +8,9 @@
     id:
     <a th:text = "${user.getId()}"></a>
     <br>
+    Login:
+    <a th:text = "${user.getLogin()}"></a>
+    <br>
     FirstName:
     <a th:text = "${user.getFirstName()}"> </a>
     <br>
