--- a/src/main/webapp/WEB-INF/views/edit.html
+++ b/src/main/webapp/WEB-INF/views/edit.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/users/{id}(id = ${user.getId()})}" th:object="${user}">
+<form th:method="POST" th:action="@{/admin/{id}(id = ${user.getId()})}" th:object="${user}">
+    <label for="login">Login</label>
+    <input type = "text" th:field="*{login}" id = "login">
+    <br/>
+    <label for="password">Password</label>
+    <input type = "text" th:field="*{password}" id = "password">
+    <br/>
     <label for="firstName">First Name</label>
     <input type = "text" th:field="*{firstName}" id = "firstName">
     <br/>
