--- a/src/main/webapp/WEB-INF/views/new.html
+++ b/src/main/webapp/WEB-INF/views/new.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <title>new</title>
@@ -16,18 +15,18 @@
     <label for="password">password</label>
     <input type = "text" th:field="*{password}" id = "password">
     <br/>
-<!--    <label for="firstName">First Name</label>-->
-<!--    <input type = "text" th:field="*{firstName}" id = "firstName">-->
-<!--    <br/>-->
-<!--    <label for="lastName">Last Name</label>-->
-<!--    <input type = "text" th:field="*{lastName}" id = "lastName">-->
-<!--    <br/>-->
-<!--    <label for="age">Age</label>-->
-<!--    <input type = "text" th:field="*{age}" id = "age">-->
-<!--    <br/>-->
-<!--    <label for="growth">Growth</label>-->
-<!--    <input type = "text" th:field="*{growth}" id = "growth">-->
-<!--    <br/>-->
+    <label for="firstName">First Name</label>
+    <input type = "text" th:field="*{firstName}" id = "firstName">
+    <br/>
+    <label for="lastName">Last Name</label>
+    <input type = "text" th:field="*{lastName}" id = "lastName">
+    <br/>
+    <label for="age">Age</label>
+    <input type = "text" th:field="*{age}" id = "age">
+    <br/>
+    <label for="growth">Growth</label>
+    <input type = "text" th:field="*{growth}" id = "growth">
+    <br/>
     <input type="submit" value="create"/>
 
 </form>
