--- a/src/main/webapp/WEB-INF/views/allUsers.html
+++ b/src/main/webapp/WEB-INF/views/allUsers.html
@@ -12,7 +12,7 @@
 
     <a th:text ="${user.getId()}"></a>
     &nbsp
-    <a th:href="@{/user/{id}(id = ${user.getId()})}" th:text ="${user.getLogin()}"></a>
+    <a th:href="@{/admin/{id}(id = ${user.getId()})}" th:text ="${user.getLogin()}"></a>
     <br/>
     <a th:href = "@{/admin/{id}/edit(id=${user.getId()})}">update</a>
     &nbsp
@@ -23,5 +23,7 @@
 </div>
 
 <a th:href="@{/admin/new}">Add new user</a>
+<br/>
+<a th:href = "@{/logout}">Logout</a>
 
 </html>
